#254384: Prevent textfields from hanging out of their spaces; at least, on firefox, opera, and other real browsers.

--- a/css/admin.css
+++ b/css/admin.css
@@ -544,3 +544,8 @@ html.js .views-hidden {
   top: 2px;
   padding-right: 3px;
 }
+
+.views-edit-view input,
+.views-edit-view textarea {
+  max-width: 95%;
+}
